<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_frame_text"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/help_cluster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_cluster"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            app:drawableStartCompat="@drawable/icon_cloud"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/help_cluster_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cluster_desc"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/help_cluster"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/mongoLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MongoDB"
            app:layout_constraintTop_toBottomOf="@id/help_cluster_desc"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            android:textColor="@color/clickable" />

        <TextView
            android:id="@+id/mongoConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testConnect"
            app:layout_constraintTop_toBottomOf="@id/mongoLink"
            android:textSize="16sp"
            android:layout_marginStart="32dp" />

        <TextView
            android:id="@+id/mongoLinkII"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mongoConnection"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:text="@string/mongo_tutor" />

        <TextView
            android:id="@+id/help_Connection_String"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_connectionString"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/mongoLinkII"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:drawableStartCompat="@drawable/link_icon"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/help_Connection_String_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connectionStringDesc"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/help_Connection_String"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/help_cant_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_cant_connect"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/help_Connection_String_Desc"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:drawableStartCompat="@drawable/close2_icon"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/help_cant_connect_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/help_cant_connect"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>