<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".mainApp.LandingViewActivity">

    <ImageView
        android:id="@+id/ivExitBtn"
        android:layout_width="@dimen/btn_scale_w2"
        android:layout_height="@dimen/btn_scale_h2"
        android:src="@drawable/btn_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp" />

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="@dimen/logo_scale"
        android:layout_height="@dimen/logo_scale"
        android:layout_marginTop="@dimen/logo_marginT"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_atlasmobilizer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GettingStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/letLogin"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAppLogo" />

    <TextView
        android:id="@+id/mongopromotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mongo_promotion"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GettingStarted" />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/emaillabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mongopromotion" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="@string/emailhint"
        android:background="@drawable/rounded_border_text"
        android:drawableStart="@drawable/mail_icon"
        android:drawablePadding="10dp"
        android:hint="@string/emailhint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel" />

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/passwordlabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLoginEmail" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="@string/passwordhint"
        android:background="@drawable/rounded_border_text"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/passwordhint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel" />

    <ImageView
        android:id="@+id/ivLoginBtn"
        android:layout_width="@dimen/btn_scale_w"
        android:layout_height="@dimen/btn_scale_h"
        android:clickable="true"
        android:contentDescription="@string/loginlabel"
        android:focusable="true"
        android:src="@drawable/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/ivSignUpBtn"
        android:layout_marginStart="170dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLoginPassword"
        android:layout_marginBottom="48dp"/>

    <ImageView
        android:id="@+id/ivSignUpBtn"
        android:layout_width="@dimen/btn_scale_w"
        android:layout_height="@dimen/btn_scale_h"
        android:clickable="true"
        android:contentDescription="@string/signuplabel"
        android:focusable="true"
        android:src="@drawable/btn_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/ivLoginBtn"
        android:layout_marginEnd="170dp"
        app:layout_constraintTop_toBottomOf="@id/etLoginPassword"
        android:layout_marginBottom="48dp" />

    <ImageView
        android:id="@+id/ivLoginHelpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/help_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>