<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainApp.DatabaseActivity"
    android:background="@drawable/main_background">

    <LinearLayout
        android:id="@+id/collectionTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables"
        android:background="@drawable/rounded_border_text"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvDatabaseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:drawableStartCompat="@drawable/cloud_icon_30"
            android:drawablePadding="15dp"
            android:text="@string/databaseName"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/ivDisconnectBtn"
            android:layout_width="@dimen/btn_scale_w2"
            android:layout_height="@dimen/btn_scale_h2"
            android:src="@drawable/btn_disconnect"
            android:contentDescription="@string/disconnect"
            android:layout_marginEnd="24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/collectionHelpBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/collectionTopBar"
        android:background="@drawable/rounded_border_text"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Collection"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/ivHelpCollection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/help2_icon"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/help" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/collectionRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refresh_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/refresh" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/collectionHelpBar"
        app:layout_constraintBottom_toTopOf="@id/collectionCRUDBar"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@drawable/rounded_border_text"
        android:padding="10dp"
        android:foregroundGravity="top"
        android:layout_margin="8dp" >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/collectionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/api_item_model" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/collectionCRUDBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="bottom"
        android:foregroundGravity="bottom"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_border_text"
        android:padding="8dp">

        <EditText
            android:id="@+id/collectionNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="name"
            android:hint="@string/CollectionName"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#78909C" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:id="@+id/collectionRemoveButton"
                android:layout_width="@dimen/btn_scale_w2"
                android:layout_height="@dimen/btn_scale_h2"
                android:src="@drawable/btn_remove"
                android:layout_marginEnd="48dp"
                android:contentDescription="@string/remove" />

            <ImageView
                android:id="@+id/collectionCreateButton"
                android:layout_width="@dimen/btn_scale_w2"
                android:layout_height="@dimen/btn_scale_h2"
                android:src="@drawable/btn_create"
                android:layout_marginStart="48dp"
                android:contentDescription="@string/create" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>